hphp/test/zend/good/ext-gd/imagecreatetruecolor_error2.php
<?php
$image = imagecreatetruecolor(-1, 30);
$image = imagecreatetruecolor(30, -1);
$image = imagecreatetruecolor(999999999999999999999999999, 30);
$image = imagecreatetruecolor(30, 999999999999999999999999999);
?>