hphp/test/zend/bad/ext/gd/tests/imagechar_error7.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagechar($image, 1, 5, 5, 'C', 'font');

?>